# LMcomparison

./: README.md  Transformers_GPT.ipynb  demo.ipynb  demo.py  gpt_test.py  itos_shake.pkl  mLSTMblock.py  mamba_test.py  pyproject.toml  requirements.txt  sLSTMblock.py  stoi_shake.pkl  train_GPT.ipynb  utils.py  xLSTM.py  xLSTMmodel.py  xlstm_test.py
attention/: __init__.py  attention_model.py
mamba/: __init__.py  mamba_block.py  mamba_model.py
models/attention_model/: attention.pkl
tests/: gpt_test  mamba_test  xlstm_test.py
xlstm/: __init__.py  mLSTMblock.py  sLSTMblock.py  xLSTM.py  xLSTMmodel.py
