[tool.poetry]
name = "lmcomparison"
version = "0.1.0"
description = ""
authors = ["Saurabh Shetty <shetty.sau@northeastern.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.4.0"
wandb = "^0.17.5"
torcheval = "^0.0.7"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
